add nncase infer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,22 @@ set(AUDIOFILE_PATH ${CMAKE_SOURCE_DIR}/3rd_party/audioFile)
 # audioFile
 set(OPENCC_PATH ${CMAKE_SOURCE_DIR}/3rd_party/libopencc)
 
+# # gsl
+# set(GSL_PATH ${CMAKE_SOURCE_DIR}/3rd_party/)
+
+# nncase
+set(NNCASE_PATH ${CMAKE_SOURCE_DIR}/3rd_party/nncase)
+link_directories(${NNCASE_PATH}/lib)
+
+
 ## tokenizers-cpp
 #set(TOKENIZER_PATH ${CMAKE_SOURCE_DIR}/3rd_party/tokenizers-cpp)
 #link_directories(${TOKENIZER_PATH}/lib)
 #include_directories(${TOKENIZER_PATH}/include)
 
 include_directories(
+        ${CMAKE_SOURCE_DIR}/3rd_party
+        ${NNCASE_PATH}/include
         ${OPENCC_PATH}/include
         ${ROSA_PATH}
         ${AUDIOFILE_PATH}
@@ -35,7 +45,7 @@ FILE(GLOB SRCS ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 
 add_library(whisper_melo STATIC ${SRCS})
 
-target_link_libraries(whisper_melo onnxruntime dl m pthread opencc)
+target_link_libraries(whisper_melo PUBLIC onnxruntime dl m pthread opencc Nncase.Runtime.Native)
 
 add_executable(demo ${CMAKE_SOURCE_DIR}/demo/demo.cpp)
 
