--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,28 @@ cmake_minimum_required(VERSION 3.5)
 project(whisper_meloTTS)
 
 # onnxruntime
-set(ONNXRUNTIME_PATH ${CMAKE_SOURCE_DIR}/3rd_party/onnxruntime)
+set(ONNXRUNTIME_PATH ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/onnxruntime)
 link_directories(${ONNXRUNTIME_PATH}/lib)
 
 # librosa
-set(ROSA_PATH ${CMAKE_SOURCE_DIR}/3rd_party/librosa)
+set(ROSA_PATH ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/librosa)
 
 # audioFile
-set(AUDIOFILE_PATH ${CMAKE_SOURCE_DIR}/3rd_party/audioFile)
+set(AUDIOFILE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/audioFile)
 
-# audioFile
-set(OPENCC_PATH ${CMAKE_SOURCE_DIR}/3rd_party/libopencc)
+# openCC
+set(OPENCC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc)
+find_library(OPENCC_LIB NAMES opencc PATHS ${OPENCC_PATH}/lib)
+link_directories(${OPENCC_PATH}/lib)
+
 
 # # gsl
 # set(GSL_PATH ${CMAKE_SOURCE_DIR}/3rd_party/)
 
 # nncase
-set(NNCASE_PATH ${CMAKE_SOURCE_DIR}/3rd_party/nncase)
+set(NNCASE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/nncase)
+find_library(NNCASE_LIB NAMES Nncase.Runtime.Native PATHS ${NNCASE_PATH}/lib)
 link_directories(${NNCASE_PATH}/lib)
-
 
 ## tokenizers-cpp
 #set(TOKENIZER_PATH ${CMAKE_SOURCE_DIR}/3rd_party/tokenizers-cpp)
@@ -29,26 +32,34 @@ link_directories(${NNCASE_PATH}/lib)
 #include_directories(${TOKENIZER_PATH}/include)
 
 include_directories(
-        ${CMAKE_SOURCE_DIR}/3rd_party
+        ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party
         ${NNCASE_PATH}/include
         ${OPENCC_PATH}/include
         ${ROSA_PATH}
         ${AUDIOFILE_PATH}
         ${ONNXRUNTIME_PATH}/include
-        ${CMAKE_SOURCE_DIR}/include
-)
-link_directories(
-        ${OPENCC_PATH}/lib
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 FILE(GLOB SRCS ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 
 add_library(whisper STATIC ${SRCS})
 
-target_link_libraries(whisper PRIVATE onnxruntime dl m pthread opencc Nncase.Runtime.Native)
+target_link_directories(whisper PRIVATE ${OPENCC_PATH}/lib ${NNCASE_PATH}/lib)
 
-target_include_directories(whisper PUBLIC include)
+target_link_libraries(whisper PRIVATE onnxruntime dl m pthread  ${OPENCC_LIB} ${NNCASE_LIB})
 
-add_executable(demo ${CMAKE_SOURCE_DIR}/demo/demo.cpp)
+install(TARGETS whisper
+    EXPORT whisper_export
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    INCLUDES DESTINATION include
+)
+
+export(EXPORT whisper_export
+    FILE ${CMAKE_CURRENT_BINARY_DIR}/whisper_targets.cmake
+)
+
+add_executable(demo ${CMAKE_CURRENT_SOURCE_DIR}/demo/demo.cpp)
 
 target_link_libraries(demo whisper)
