copy opencc to source dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,9 +71,9 @@ export(EXPORT whisper_export
     FILE ${CMAKE_CURRENT_BINARY_DIR}/whisper_targets.cmake
 )
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/t2s.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/TSPhrases.ocd2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/TSCharacters.ocd2 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/t2s.json DESTINATION ${CMAKE_SOURCE_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/TSPhrases.ocd2 DESTINATION ${CMAKE_SOURCE_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/libopencc/share/opencc/TSCharacters.ocd2 DESTINATION ${CMAKE_SOURCE_DIR})
 
 add_executable(demo ${CMAKE_CURRENT_SOURCE_DIR}/demo/demo.cpp)
 
